@@ -36,10 +36,6 @@ public class PasswordCache {
     public List<GeneratedPassword> getAllCachedPasswords() {
         return cache.entrySet().stream()
                 .map(entry -> new GeneratedPassword(entry.getKey(), entry.getValue()))
-                .collect(Collectors.toList());
-    }
-
-    public void putAllGeneratedPasswords(List<GeneratedPassword> generatedPasswords) {
-        generatedPasswords.forEach(password -> cache.put(password.getId(), password.getPassword()));
+                .toList();
     }
 }
